refactor: Standardize batch job execution tracking and logging with a new summary DTO and dedicated listener.